--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Emile's TicTacToe</title>
         <link rel="icon" href="images/1.png">
         <link rel="stylesheet" href="style/style.css">
-        <script src="js/script.js" defer></script>
+        <script src="js/script.js"></script>
 
     </head>
-    
+
 <body>
 <div id="settings-game">
     <h1>Emile's TicTacToe</h1>
@@ -24,7 +23,7 @@
 
 <div id="game" class="game-container" hidden="true">
     <h1>Let's play !</h1>
-    <div id="divGame"></div>
+    <div id="div-game"></div>
     <div id="end-container"></div>
 </div>
 </body>
